finished week6 assignment
